<resources>
    <string name="app_name">Traveler Ui Kit</string>
    <string name="contact">Contact Details</string>
    <string name="open_maps">View in Maps</string>
    <string name="info">Info</string>
    <string name="provider">Provider</string>
    <string name="button_see_all">See All</string>
    <string name="label_about_the_tour">About the tour</string>
    <string name="label_contact_details">Contact Details</string>
    <string name="label_location">Location</string>
    <string name="label_starting_at">Starting at</string>
    <string name="total_price">Total Price</string>
    <string name="label_price">Price</string>
    <string name="button_check_availability">Check Availability</string>
    <string name="button_buy_now">Buy Now</string>
    <string name="button_next">Next</string>
    <string name="button_book_parking">Book Parking</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="unknown_error_message">Unfortunately something went wrong, please try again</string>
    <string name="ok">OK</string>
    <string name="hint_select_date">Select Date</string>
    <string name="hint_select_time">Select Time</string>
    <string name="not_available">Not Available</string>
    <string name="no_argument_exception">Argument %1$s is required to launch %2$s.</string>
    <string name="label_sorry">Sorry</string>
    <string name="label_nothing_to_show">There is nothing to show :(</string>
    <string name="label_something_went_wrong">Something went wrong!</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="book_now">Book Now</string>
    <string name="checkout">Checkout</string>
    <string name="required">This field is required.</string>
    <string name="label_price_per_person">%s per person</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="billing_information">Billing Information</string>
    <string name="review_order">Review your order</string>
    <string name="discard_order">Discard this order?</string>
    <string name="discard">discard</string>
    <string name="next">next</string>
    <string name="view_tickets">View Tickets</string>
    <string name="confirmation_number">Confirmation number:</string>
    <string name="confirmation_email">Confirmation email:</string>
    <string name="home">Home</string>

    <string name="experience_name">Experience Name</string>
    <string name="experience_image">Experience Image</string>
    <string name="order_processed_label">Thank you, your order has been processed.</string>
    <string name="order_processed_description">An order confirmation has been sent to your email. Please be sure to
        check your spam if not present in your inbox.
    </string>
    <string name="title_activity_order_detail">OrderDetail</string>
    <string name="label_billing_info">Billing Information</string>
    <string name="button_email_tickets">EMAIL TICKETS</string>
    <string name="toggle_wishlist_contentdescription">Toggle Wishlist</string>
    <string name="cancel_order">Cancel order</string>
    <string name="non_refundable">Non Refundable</string>
    <string name="save_payment">Save Credit Card</string>
    <string name="saved_item">Saved Item</string>
    <string name="remove">Remove</string>

    <string name="search_result_all_categories">All Categories</string>
    <string name="search_result_catogories_count">Categories</string>
    <string name="booking_search_city_title">Search by City</string>
    <string name="booking_search_current_label_label">Current:</string>
    <string name="booking_search_categories_title">Category</string>
    <string name="booking_search_keywords_title">Keywords (optional)</string>
    <string name="booking_search_keywords_hint">Try keywords (e.g. Beer Market Tour)</string>
    <string name="booking_search_search_button_text">Search Experience</string>
    <string name="booking_search_edit_search_button_text">Change</string>
    <string name="booking_search_sort_filters_button_text"><![CDATA[Sort & Filters]]></string>
    <string name="price_range_dialog_title">Price Range:</string>
    <string name="price_range_min_price_label">Min Price</string>
    <string name="price_range_max_price_label">Max Price</string>
    <string name="search_filters_sort_label">Sort</string>
    <string name="search_filters_order_by_label">Order by</string>
    <string name="search_filters_filter_label">Filters</string>
    <string name="search_filters_price_range_label">Price Range</string>
    <string name="search_filters_themes_label">Themes</string>
    <string name="search_filters_reset_button_text">Reset</string>
    <string name="sort_dialog_label">Current:</string>
    <string name="apply_button_text">Apply</string>

    <string name="view">View</string>
    <string name="total">Total:</string>
    <string name="search_this_area">Search this Area</string>
    <string name="loading">Loading…</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="parking_balance_description">You will pay the balance of the parking fee at the Parking facility. Please ensure you have a means to complete payment</string>
    <string name="what_is_this">What is this?</string>
    <string name="contact_parking_company">Contact Parking Company</string>
    <string name="powered_by">Powered by</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="distance_from_the_terminal">Distance from the Terminal</string>
    <string name="general_information">General Information</string>
    <string name="parking_near_you">Parking Near you</string>
    <string name="change">Change</string>
    <string name="location">Location</string>
    <string name="near_me">Near Me</string>
    <string name="near_airport">Near Airport</string>
    <string name="drop_off_date_and_time">Drop-off date and time</string>
    <string name="pickup_date_and_time">Pickup date and time</string>
    <string name="find_parking">Find Parking</string>
    <string name="search_by_airport_code">Search by Airport Code</string>
    <string name="edittext_airport_code_hint">E.g. YYZ</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="additional_parking_options">Looking for additional Parking options?</string>
    <string name="move_around_map">Move around the map and select “search this area” to view available Parking options in the area.</string>
    <string name="balance">ⓘ Balance:</string>
    <string name="pay_today">Pay today:</string>
    <string name="partner_offering_total_price">Total price</string>
    <string name="partner_offering_meals_from">Meals from</string>
    <string name="partner_offering_starting_from">Starting from</string>
    <string name="partner_offering_checkout_button_text">Checkout</string>
    <string name="partner_offering_quantity_title">Select Quantity of Meals</string>
    <string name="partner_offering_quantity_custom_meal_title">Your customized meal</string>
    <string name="partner_offering_subtitle">choose your meal items. you can choose one item from each kind to make a customized meal. simply select on whatever you want in your meal. some stuff are charged extra.</string>
    <string name="partner_offering_selec_iterm_button_text">Select Items</string>
    <string name="partner_offering_selection_title">Select your Meal items</string>
    <string name="partner_offering_select_quantitiy_button_text">Select Quantity</string>
    <string name="partner_offering_expand_label">Read More</string>
    <string name="partner_offering_collapse_label">Read Less</string>


    <string name="itinerary_category_title">Category</string>
    <string name="itinerary_date_range">Date Range</string>
    <string name="itinerary_start_date">Start</string>
    <string name="itinerary_end_date">End</string>
    <string name="label_terms_and_conditions">Terms and conditions</string>
    <string name="itinerary_terms_and_conditions">Terms and conditions</string>

    <string name="empty_itinerary">Your itinerary is empty</string>
    <string name="unknownOrderMessage">Please contact support for more information about this order.\nOrder ID: </string>

</resources>
