<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/emptyCatalogLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerInParent="true">
    <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sorry"
            android:textStyle="bold"
            android:textSize="20sp"/>
    <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:text="@string/label_nothing_to_show"/>
    <TextView
            android:layout_width="wrap_content"
            android:id="@+id/actionTextView"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:padding="10dp"/>
</LinearLayout>