<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.BillingInformationCollectionFragment"
        style="@style/Container">

    <!-- Billing -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/billing_information"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            style="@style/Heading.Text.Title"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_billingCollection_availableItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            tools:listitem="@layout/item_label_value"
            tools:itemCount="2"/>

    <CheckBox
            android:id="@+id/checkbox_billingCollection_savePayment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save_payment"
            android:layout_margin="@dimen/margin_default"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_orderSummary_addCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default"
            style="@style/OutlinedButton.Primary"
            android:text="@string/add_credit_card"
            app:icon="@android:drawable/ic_input_add"
            app:iconGravity="textStart"
            android:layout_marginLeft="@dimen/margin_default"/>

</LinearLayout>