<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/itinerary_category_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:overScrollMode="never" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/itinerary_date_range"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:text="@string/itinerary_start_date"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

            <EditText
                    android:id="@+id/etStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_bg_no_color"
                    android:gravity="center"
                    android:focusable="false"
                    android:textSize="16sp"
                    tools:text="04 FEB 2020" />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="bottom"
                android:text=" - "
                android:textColor="@color/black"
                android:textSize="20dp" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:text="@string/itinerary_end_date"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

            <EditText
                    android:id="@+id/etEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:background="@drawable/bordered_bg_no_color"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="22 APR 2020" />
        </LinearLayout>

    </LinearLayout>

<!--    TODO:  unset the hardcoded background tint - this is a temp change to do the fast version of theming-->
    <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/apply_button_text" />

</LinearLayout>