<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

    <TextView
            android:id="@+id/tvAvailableRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/price_range_dialog_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="Price Range: 1$ - 1000$ CAD" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:text="@string/price_range_min_price_label"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

            <EditText
                    android:id="@+id/etMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_bg_no_color"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="16sp"
                    tools:text="0" />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="bottom"
                android:text=" - "
                android:textColor="@color/black"
                android:textSize="20dp" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:text="@string/price_range_max_price_label"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

            <EditText
                    android:id="@+id/etMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bordered_bg_no_color"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="16sp"
                    tools:text="50000" />
        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/apply_button_text" />

</LinearLayout>